--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Pig Latin</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -24,7 +24,7 @@
 
   <button onclick="convert()">Submit</button>
 <!-- partial -->
-  <script  src="./script.js"></script>
+  <script  src="script.js"></script>
 
 </body>
 </html>
