--- a/index.html
+++ b/index.html
@@ -7,23 +7,25 @@
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<h2>Pig Latin Converter</h2>
-
-  <label for="conversionType">Select Conversion Type:</label>
-  <select id="conversionType">
-    <option value="englishToPigLatin">English to Pig Latin</option>
-    <option value="pigLatinToEnglish">Pig Latin to English</option>
-  </select>
-
-  <label for="inputText1">Enter Text:</label>
-  <input type="text" id="inputText1">
-
-  <label for="inputText2">Result:</label>
-  <div id="result"></div>
-
-  <button onclick="convert()">Submit</button>
-<!-- partial -->
+  <div class="container">
+    <h2>Pig Latin Converter</h2>
+ 
+   <label for="conversionType">Select Conversion Type:</label>
+   <select id="conversionType">
+     <option value="englishToPigLatin">English to Pig Latin</option>
+     <option value="pigLatinToEnglish">Pig Latin to English</option>
+   </select>
+ <br>
+   <label for="inputText1">Enter Text:</label>
+   <input type="text" id="inputText1">
+ <br>
+   <label for="inputText2">Result:</label>
+   <div id="result"></div>
+ <br>
+   <button onclick="convert()">Submit</button>
+ </div>
+ 
+   
   <script  src="script.js"></script>
 
 </body>
